--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Nanoid" version="3.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
   <package id="NLog" version="5.2.3" targetFramework="net462" />
+  <package id="SharpVectors" version="1.8.1" targetFramework="net462" />
 </packages>
