--- a/clean-recent-mini.csproj
+++ b/clean-recent-mini.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7D86C93F-74CF-4D00-9963-C2FA7B4DECA5}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>clean_recent_mini</RootNamespace>
-    <AssemblyName>clean-recent-mini</AssemblyName>
+    <RootNamespace>CleanRecentMini</RootNamespace>
+    <AssemblyName>CleanRecentMini</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -228,8 +228,8 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\Icons\icon.ico" />
-    <Content Include="Assets\Icons\BroomDark.svg" />
-    <Content Include="Assets\Icons\broomlight.svg" />
+    <Resource Include="Assets\Icons\BroomDark.svg" />
+    <Resource Include="Assets\Icons\BroomLight.svg" />
     <Content Include="Library\QuickAccess.dll" />
   </ItemGroup>
   <ItemGroup />
