--- a/CleanRecentMini.csproj
+++ b/CleanRecentMini.csproj
@@ -50,7 +50,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=9.0.0.3, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -100,8 +101,8 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-    <Reference Include="Wincent, Version=0.1.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Wincent.0.1.3\lib\net48\Wincent.dll</HintPath>
+    <Reference Include="Wincent, Version=0.1.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Wincent.0.1.4\lib\net48\Wincent.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
