--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="6.0.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Fody" version="6.8.2" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.3" targetFramework="net48" />
   <package id="Serilog" version="4.2.0" targetFramework="net48" />
   <package id="Serilog.Sinks.Console" version="6.0.0" targetFramework="net48" />
